--- a/ait_partner_dedicated_location/views/res_config_settings.xml
+++ b/ait_partner_dedicated_location/views/res_config_settings.xml
@@ -2,7 +2,7 @@
     <data>
         <record model="ir.ui.view" id='res_config_settings_view_form_inherith'>
             <field name="name">Warehouse</field>
-            <field name="model">res.config.settings</field>
+            <field name="model">res.config</field>
             <field name="inherit_id" ref="stock.res_config_settings_view_form" />
             <field name="arch" type="xml">
                 <xpath expr="//div[@id='use_own_routes'][1]" position="after">
